[project]
name = "maas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.35.0",
    "httpx2>=2.3.0",
]
